@@ -206,6 +206,10 @@ flat_sun_max = -5
 ; Defaults to -1 - will not be used. Please set this if you plan to use GCN connection.
 ; seplimit = xxxx
 
+; Whenever to record GRBs not visible from current location. Default to true,
+; e.g. all GRBs will be recoreded.
+notvisible = true
+
 ; Optional binary, which will be passed various parameters about GRB. On
 ; command line, this program will receive values (in following order) of tar_id
 ; grb_id grb_seqn grb_type grb_ra grb_dec grb_is_grb grb_date grb_errorbox and 
